--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -93,12 +93,18 @@
                 </div>
                 <label for="validationCustom04" class="form-label">Type of paint:</label>
                 <div class="form-floating">
-                    <textarea class="form-control" placeholder="Leave a comment here" id="answer1" style="height: 175px"></textarea>
+                    <textarea class="form-control" placeholder="Leave a comment here" id="answer1" style="height: 125px"></textarea>
                     <label for="floatingTextarea"></label>
                 </div>
+                <label for="validationCustom04" class="form-label">Industrial Names:</label>
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="answer4" style="height: 125px"></textarea>
+                    <label for="floatingTextarea"></label>
+                </div>
+
                 <label for="validationCustom04" class="form-label">Litres of paint required:</label>
                 <div class="form-floating">
-                    <textarea class="form-control" placeholder="Leave a comment here" id="answer2" style="height: 175px"></textarea>
+                    <textarea class="form-control" placeholder="Leave a comment here" id="answer2" style="height: 125px"></textarea>
                     <label for="floatingTextarea"></label>
                 </div>
             </div>
